--- a/index.html
+++ b/index.html
@@ -3,12 +3,168 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>E_School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="cwbg">
+
+      <div class="container">
+        <nav class="navbar navbar-expand-lg  ">
+          <div class="container-fluid ">
+            <a class="navbar-brand" href="#"><img class="nav-logo" src="ICON/Logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav ms-auto mb-3 mb-lg-0 nav-justified">
+                <a class="nav-link active" aria-current="page" href="#">Books</a>
+                <a class="nav-link active" href="#">Courses</a>
+                <a class="nav-link active" href="#">Others</a>
+                <a class="nav-link active" href="#">Blog</a>
+                <button class="m-btn">Sign in</button>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <div class="l-width">
+              <p class="m-clr-r">Are you ready to Learn?</p>
+              <h1 class="fw-bolder">Learn With fun <br>on <span class="m-clr-g">any schedule</span></h1><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
+              <button class="m-btn"><a class="m-btn" href="">Get Started</a></button>
+
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img class="right-col" src="Photos/Illustration.png" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3">
+          <div class="card border-0" style="width: 18rem;">
+            <img class="icon" src="ICON/book.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5>1500+ Topic</h5>
+              <p>Learn Anything</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card border-0" style="width: 18rem;">
+          <img class="icon" src="ICON/Students.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5>1500+ Topic</h5>
+            <p>Learn Anything</p>
+          </div>
+        </div></div>
+        <div class="col-md-3">
+          <div class="card border-0" style="width: 18rem;">
+            <img class="icon" src="ICON/Test.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5>1500+ Topic</h5>
+              <p>Learn Anything</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card border-0" style="width: 18rem;">
+            <img class="icon" src="ICON/Student.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5>1500+ Topic</h5>
+              <p>Learn Anything</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <h1 class="text-center">Testimonial</h1>
+
+      <div class="row align-items-center">
+        <div class="col-md-4">
+          <img style="width: 28%; margin-left: 50%;" src="Photos/Man.png" alt="">
+
+        </div>
+        <div class="col-md-8">
+          <p style="width: 80%;">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration in some form, by injected humour, 
+           or randomised words which don't look even slightly believable.</p>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="ftr-bg">
+      <div class="container last-container">
+        <div class="row">
+          <div class="col-md-4">
+            <p>Millions of people of all ages and from around
+              the world are improving their lives with us</p>
+  
+          </div>
+          <div class="col-md-8">
+            <div class="row align-items-end">
+              <div class="col-md-4">
+                <p>Course <br>
+                  Graphic Design <br>
+                  Web Design <br>
+                  Business <br>
+                  Marketing <br>
+                  Engineering</p>
+  
+              </div>
+              <div class="col-md-4">
+                <p>Terms <br>
+                  Graphic Design <br>
+                  Web Design <br>
+                  Business <br>
+                  Marketing <br>
+                  Engineering</p>
+  
+              </div>
+              <div class="col-md-4">
+                <p>Useful Link <br>
+                  Graphic Design <br>
+                  Web Design <br>
+                  Business <br>
+                  Marketing <br>
+                  Engineering</p>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br><br>
+
+      <footer class="m-footer">
+        <p >Copyright © 2020 Rokomari.com</p>
+      </footer>
+
+    </div>
+
+    
+
+
+
+
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
   </body>
